# _new_cube

./: .gitignore  CODEOWNERS  README.md  SECURITY.md  USAGE.md  pyproject.toml
cube3d/: colab_cube3d.ipynb  generate.py  vq_vae_encode_decode.py
cube3d/inference/: engine.py  logits_postprocesses.py  mlx_engine.py  utils.py
cube3d/mesh_utils/: postprocessing.py
cube3d/model/autoencoder/: grid.py  one_d_autoencoder.py
cube3d/model/gpt/: dual_stream_roformer.py
cube3d/renderer/: blender_script.py
cubepart/: .gitignore  CODEOWNERS  README.md  pyproject.toml
cubepart/configs/: shape_denoiser_multimesh.yaml
cubepart/cube_part/: __init__.py
cubepart/cube_part/models/autoencoders/: one_d_grid_autoencoder.py  utils.py
cubepart/cube_part/models/autoencoders/bottlenecks/: dcae.py
cubepart/cube_part/models/denoisers/: condition_processors.py  hijack_qwenimage_multi.py  utils.py
cubepart/cube_part/models/transformers/: attention.py  gated_attention.py  norm.py
cubepart/cube_part/pipelines/: __init__.py  base.py  shape_denoiser.py
cubepart/cube_part/systems/: shape_denoiser.py
cubepart/cube_part/utils/: base.py  config.py  field.py  grid.py  mesh.py  runtime.py
cubepart/examples/: gradio_demo.py  run_inference.py
cubepart/examples/inputs/: examples.json
tests/: conftest.py  test_autocast_dtype.py  test_backend_selection.py  test_imports.py  test_parity.py
