# cubepart - phase-two migration target.
# May need to fall back to Python 3.13 if fpsample blocks 3.14 (no cp314 wheel upstream).

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube_part"
version = "0.1.0"
description = "Inference pipeline for multi-part 3D shape decomposition with shape diffusion."
authors = [{ name = "cipher-rc5" }]
readme = "README.md"
requires-python = "==3.14.*"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "torch==2.12.0",
  # 0.37.0 is the latest diffusers that resolves against stable safetensors;
  # 0.38.0 requires a safetensors 0.8.0 prerelease.
  "diffusers==0.37.0",
  "transformers==5.9.0",
  # diffusers/transformers model loading relies on accelerate.
  "accelerate==1.13.0",
  "safetensors==0.7.0",
  "omegaconf==2.3.0",
  "numpy==2.4.6",
  "scikit-image==0.26.0",
  "trimesh==4.12.2",
  "tqdm==4.67.3",
  "einops==0.8.2",
]

[project.optional-dependencies]
# gradio_demo.py uses huggingface_hub.snapshot_download directly.
demo = ["gradio==6.15.2", "huggingface-hub==1.17.0"]
dev = ["pytest==9.0.3", "ruff==0.15.15"]
# warp-lang only ships usable CUDA support on Linux; gate it behind this extra.
cuda = ["warp-lang==1.13.0; sys_platform == 'linux'"]
# fpsample may lack a cp314 wheel; this package can stay on 3.13 until upstream ships one.
fpsample = ["fpsample==1.0.2"]

[tool.setuptools]
packages = { find = { include = ["cube_part*"] } }
include-package-data = true

[tool.setuptools.package-data]
"cube_part" = ["**/*.yaml"]
